--- a/views/base.pug
+++ b/views/base.pug
@@ -22,6 +22,7 @@ html
 
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
     //- script(src='/js/mapbox.js')
-    //- script(src='/js/login.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.5/esm/axios.min.js')
+    script(src='/js/login.js')
     //- script(src='https://js.stripe.com/v3/')
     //- script(src='/js/bundle.js')
